# pcli

./: Cargo.toml  README.md  projects.json
.proj/: todo.md  todos.json
src/: cmd.rs  commands.rs  environment.rs  json_io.rs  main.rs  traits.rs  utils.rs  xdg.rs
src/Todos/: commands.rs  mod.rs  structs.rs  todos.rs
src/configuration/: mod.rs  structs.rs
src/projects/: commands.rs  db.rs  mod.rs  projects.rs  structs.rs
src/structs/: data.rs
src/templating/: commands.rs  file_template_transfomer.rs  file_templates.rs  files.rs  mod.rs  project_template_transformer.rs  project_templates.rs  projects.rs  structs.rs
~/.vim/swap/: README.md.swp  cmd.rs.swo  cmd.rs.swp  commands.rs.swp  db.rs.swp  file_template_transfomer.rs.swp  file_templates.rs.swp  files.rs.swp  json_io.rs.swo  json_io.rs.swp  main.rs.swo  main.rs.swp  mod.rs.swm  mod.rs.swn  mod.rs.swo  mod.rs.swp  projects.rs.swm  projects.rs.swn  projects.rs.swo  projects.rs.swp  structs.rs.swo  structs.rs.swp  todos.rs.swp  utils.rs.swp  xdg.rs.swp
