[package]
name = "pcli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.13", features = ["derive"] }
regex = "1.9.3"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
walkdir = "2.3.3"
xdg = "2.4.1"
